site usando bootstrap

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="collapse navbar-collapse ">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Quem somos</a>
+                    <a class="nav-link" aria-current="page" href="#quemsomos">Quem somos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Parceiros</a>
+                    <a class="nav-link " aria-current="page" href="#parceiros">Parceiros</a>parceiros
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Serviços</a>
+                    <a class="nav-link " aria-current="page" href="#servicos">Serviços</a>
                 </li>
             </ul>
         </div>
@@ -32,7 +32,12 @@
         <div class="container-fluid container-fluid-2 quem-somos text-center">
             <h3 class="margin title-qs">Quem Somos?<span class="pod"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span></h3>
             <img class='img-qs' src="images/time.jpg">
-            <p class="margin text-center fw-normal title-qs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ad asperiores quae culpa nisi tempora magni esse minima laborum veritatis quam et, nulla reprehenderit hic doloremque nemo temporibus. Magnam, ipsam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ullam nesciunt quidem corporis maiores veniam veritatis harum molestias quo ipsam, vero, reiciendis at iusto rem odio dolorem maxime. Incidunt, repudiandae! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat fuga similique dignissimos suscipit nobis repudiandae praesentium laboriosam reprehenderit illum numquam, qui omnis, atque, expedita et recusandae voluptatibus culpa ipsum eos.</p>
+            <div class="row row-servicos">
+                <div class="col-lg-4"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga expedita debitis cupiditate dolore corporis alias tempore, saepe voluptate modi maiores aliquid nostrum quia quo veritatis. Nihil ducimus neque accusamus tempore!</p></div>
+                <div class="col-lg-4"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nihil numquam neque dolor quod id, iste quis quam commodi repudiandae dolorum omnis praesentium consequuntur aliquid, officia assumenda. Earum, consequuntur magni?</p></div>
+                <div class="col-lg-4"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates saepe, sapiente nesciunt velit nostrum impedit! Quas, possimus aliquid sapiente deleniti exercitationem maxime cum quidem odit quia illum. Porro, repellendus sapiente.</p></div>
+            </div>
+            <!--<p class="margin text-center fw-normal title-qs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ad asperiores quae culpa nisi tempora magni esse minima laborum veritatis quam et, nulla reprehenderit hic doloremque nemo temporibus. Magnam, ipsam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ullam nesciunt quidem corporis maiores veniam veritatis harum molestias quo ipsam, vero, reiciendis at iusto rem odio dolorem maxime. Incidunt, repudiandae! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat fuga similique dignissimos suscipit nobis repudiandae praesentium laboriosam reprehenderit illum numquam, qui omnis, atque, expedita et recusandae voluptatibus culpa ipsum eos.</p>-->
         </div>
     </section>
     
